Fix side image cropping when screen shrinks

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div id="side-image-container">
-        <img src="../images/food.jpg" alt="Plates of food">
-        <p>Photo by <a href="https://unsplash.com/@kaboompics">Karolina Grabowska</a> on <a href="https://unsplash.com/photos/HtTBzytfJ9I">Unsplash</a></p>
+        <!-- <img src="../images/food.jpg" alt="Plates of food"> -->
+        <!-- <p>Photo by <a href="https://unsplash.com/@kaboompics">Karolina Grabowska</a> on <a href="https://unsplash.com/photos/HtTBzytfJ9I">Unsplash</a></p> -->
+        <h1>SIGN-UP FORM</h1>
     </div>
     <main>
         <div id="description">
