Improve logo styling and add flex grow to main content

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Sign-Up Form</title>
 </head>
 <body>
-    <div id="side-image-container">
-        <!-- <img src="../images/food.jpg" alt="Plates of food"> -->
-        <!-- <p>Photo by <a href="https://unsplash.com/@kaboompics">Karolina Grabowska</a> on <a href="https://unsplash.com/photos/HtTBzytfJ9I">Unsplash</a></p> -->
-        <h1>SIGN-UP FORM</h1>
+    <div id="side-banner-container">
+        <div id="logo-container">
+            
+            <h1><img src="../images/odin-lined.png" alt="Odin Logo"> SIGN-UP FORM</h1>
+
+        </div>
+        <p>Photo by <a href="https://unsplash.com/@kaboompics">Karolina Grabowska</a> on <a href="https://unsplash.com/photos/HtTBzytfJ9I">Unsplash</a></p>
     </div>
     <main>
         <div id="description">
@@ -20,18 +23,20 @@
         </div>
         <div id="signup-container">
             <h3>Sign up today!</h3>
-            <form action="">
+            <form id="signup" action="">
                 <label for="first_name">First Name</label><input type="text" id="first_name" required>
                 <label for="last_name">Last Name</label><input type="text" id="last_name" required>
                 <label for="email">E-mail</label><input type="email" id="last_name" required>
                 <label for="phone_number">Phone Number</label><input type="tel" id="phone_number">
                 <label for="password">Password</label><input type="password" name="password" id="password">
                 <label for="confirm_password">Confirm Password</label><input type="password" name="confirm_password" id="confirm_password">
-                <input type="submit" value="Sign Up">
+                <!-- <input type="submit" value="Sign Up"> -->
             </form>
         </div>
         <div id="account">
             <!-- <button type="submit" id="create-account">Create Account</button> -->
+            <input type="submit" form="signup" value="Create Account">
+            <h3>Already have an account? <a href=".">Log In</a></h3>
         </div>
     </main>
 </body>
