--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="side-banner-container">
         <div id="logo-container">
-            
-            <h1><img src="../images/odin-lined.png" alt="Odin Logo"> SIGN-UP FORM</h1>
+            <img src="../images/odin-lined.png" alt="Odin Logo"> 
+            <h1> SIGN-UP FORM</h1>
 
         </div>
         <p>Photo by <a href="https://unsplash.com/@kaboompics">Karolina Grabowska</a> on <a href="https://unsplash.com/photos/HtTBzytfJ9I">Unsplash</a></p>
@@ -24,19 +24,19 @@
         <div id="signup-container">
             <h3>Sign up today!</h3>
             <form id="signup" action="">
-                <label for="first_name">First Name</label><input type="text" id="first_name" required>
-                <label for="last_name">Last Name</label><input type="text" id="last_name" required>
-                <label for="email">E-mail</label><input type="email" id="last_name" required>
-                <label for="phone_number">Phone Number</label><input type="tel" id="phone_number">
-                <label for="password">Password</label><input type="password" name="password" id="password">
-                <label for="confirm_password">Confirm Password</label><input type="password" name="confirm_password" id="confirm_password">
+                <div class="input-section"><label for="first_name">First Name</label><input type="text" id="first_name" required></div>
+                <div class="input-section"><label for="last_name">Last Name</label><input type="text" id="last_name" required></div>
+                <div class="input-section"><label for="email">E-mail</label><input type="email" id="last_name" required></div>
+                <div class="input-section"><label for="phone_number">Phone Number</label><input type="tel" id="phone_number"></div>
+                <div class="input-section"><label for="password">Password</label><input type="password" name="password" id="password"></div>
+                <div class="input-section"><label for="confirm_password">Confirm Password</label><input type="password" name="confirm_password" id="confirm_password"></div>
                 <!-- <input type="submit" value="Sign Up"> -->
             </form>
         </div>
         <div id="account">
             <!-- <button type="submit" id="create-account">Create Account</button> -->
             <input type="submit" form="signup" value="Create Account">
-            <h3>Already have an account? <a href=".">Log In</a></h3>
+            <h4>Already have an account? <a href=".">Log In</a></h4>
         </div>
     </main>
 </body>
