--- a/index.html
+++ b/index.html
@@ -18,19 +18,26 @@
     </div>
     <main>
         <div id="description">
+            <h2>Are <strong>YOU</strong> in need of a real product or service?</h2>
+            <br>
             <h3>This is not a real product or service. But if it was...</h3>
+            <br>
             <h2>You <em>NEED</em> this product or service!</h2>
         </div>
         <div id="signup-container">
             <h3>Sign up today!</h3>
             <form id="signup" action="">
-                <div class="input-section"><label for="first_name">First Name</label><input type="text" id="first_name" required></div>
-                <div class="input-section"><label for="last_name">Last Name</label><input type="text" id="last_name" required></div>
-                <div class="input-section"><label for="email">E-mail</label><input type="email" id="last_name" required></div>
-                <div class="input-section"><label for="phone_number">Phone Number</label><input type="tel" id="phone_number"></div>
-                <div class="input-section"><label for="password">Password</label><input type="password" name="password" id="password"></div>
-                <div class="input-section"><label for="confirm_password">Confirm Password</label><input type="password" name="confirm_password" id="confirm_password"></div>
+                <div class="input-section"><label for="first_name">First Name*</label><input type="text" id="first_name" required placeholder=" "></div>
+                <div class="input-section"><label for="last_name">Last Name*</label><input type="text" id="last_name" required placeholder=" "></div>
+                <div class="input-section"><label for="email">E-mail*</label><input type="email" id="last_name" required placeholder=" "></div>
+                <div class="input-section"><label for="phone_number">Phone Number</label><input type="tel" id="phone_number" placeholder=" "></div>
+                <div class="input-section">
+                    <label for="password">Password*</label><input type="password" name="password" id="password" required minlength="6" placeholder=" ">
+                    <p class="error-message">Must contain at least 6 characters</p>
+                </div>
+                <div class="input-section"><label for="confirm_password">Confirm Password*</label><input type="password" name="confirm_password" id="confirm_password" required placeholder=" "></div>
                 <!-- <input type="submit" value="Sign Up"> -->
+                <p>*Required</p>
             </form>
         </div>
         <div id="account">
