Add external font family for logo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="input-section"><label for="confirm_password">Confirm Password*</label><input type="password" name="confirm_password" id="confirm_password" required placeholder=" "></div>
                 <!-- <input type="submit" value="Sign Up"> -->
-                <p>*Required</p>
+                <p>*Required field</p>
             </form>
         </div>
         <div id="account">
