Change images url

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="side-banner-container">
         <div id="logo-container">
-            <img src="../images/odin-lined.png" alt="Odin Logo"> 
+            <img src="images/odin-lined.png" alt="Odin Logo"> 
             <h1> SIGN-UP FORM</h1>
 
         </div>
